# nuts

./: .gitignore  CONTRIBUTING.md  OFFLINE-CONNECTIVITY-GUIDE.md  PHASE2-COMPLETION-SUMMARY.md  PHASE3-COMPLETION-SUMMARY.md  PHASE3-TESTING-GUIDE.md  README.md  compose.yml  devenv.nix  devenv.yaml  go.mod  go.sum
.github/: funding.yml
.yaak/: yaak.fl_36p4pDsXza.yaml  yaak.fl_3aEd5zTo7v.yaml  yaak.fl_6GD26Nrb5d.yaml  yaak.fl_6nMaX2pXyX.yaml  yaak.fl_7PuxfgR4L6.yaml  yaak.fl_BeKgF8BWyu.yaml  yaak.fl_F9uyRErzPD.yaml  yaak.fl_HFsTvP2UvL.yaml  yaak.fl_HouTUfaVmB.yaml  yaak.fl_KoofDQJrth.yaml  yaak.fl_NyMncqjBuk.yaml  yaak.fl_NzhsYbCAJZ.yaml  yaak.fl_PddkaG4pEq.yaml  yaak.fl_Vx2bBPuqxS.yaml  yaak.fl_XonaU3qFKA.yaml  yaak.fl_Y9aoxepReK.yaml  yaak.fl_agD4HZ42DT.yaml  yaak.fl_bwiGRDJmMs.yaml  yaak.fl_dTjhdPdJVv.yaml  yaak.fl_fEMk8ujqjR.yaml  yaak.fl_jGKe38JHW5.yaml  yaak.fl_mpZkn9SeUm.yaml  yaak.fl_s5dckXYTe7.yaml  yaak.fl_tGkTJbhPVY.yaml  yaak.fl_vWgxAmkhHJ.yaml  yaak.fl_var8RMD9gd.yaml  yaak.fl_zwpwhxYdvP.yaml  yaak.rq_CEt6CQprp8.yaml  yaak.rq_DUqCofbNTZ.yaml  yaak.rq_EqQjBEiqX8.yaml  yaak.rq_JznusLFdxt.yaml  yaak.rq_MosRdi9CAw.yaml  yaak.rq_NEp9gdQbCV.yaml  yaak.rq_SoXyNFNN66.yaml  yaak.rq_Sv5fX4HaWE.yaml  yaak.rq_WsNenhTZsZ.yaml  yaak.rq_XjrGMVXhkM.yaml  (+13 more)
client/: db.json  (+11 more)
services/ai/: .env.example  .gitignore  README.md  devenv.nix  devenv.yaml  pyproject.toml
services/ai/app/: config.py  constants.py  main.py  ml_logic.py  models.py
services/ai/data/: category_model.pkl  category_vectorizer.pkl  initial_training_data.csv
services/ai/training/: training_pipeline.py
(+673 files in other folders)
