[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.13",
  "numpy>=2.3.0",
  "pandas>=2.3.0",
  "pydantic-settings>=2.9.1",
  "python-dotenv>=1.1.0",
  "scikit-learn>=1.7.0",
  "statsmodels>=0.14.4",
  "uvicorn>=0.34.3",
]
